Auth working, dynamic pages working

--- a/Frontend/.env.example
+++ b/Frontend/.env.example
@@ -6,11 +6,11 @@ POSTGRES_PRISMA_URL=
 POSTGRES_URL_NON_POOLING=
 
 # Follow the instructions here to create a Google OAuth app: https://refine.dev/blog/nextauth-google-github-authentication-nextjs/#for-googleprovider-make-sure-you-have-a-google-account
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=443946806866-q71286u6klc9m9geb3g7ttdd50prfck6.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 
 # Only for production – generate one here: https://generate-secret.vercel.app/32
-NEXTAUTH_SECRET=
+NEXTAUTH_SECRET="42713a0bfec9ea10f71154bc046e0e66"
 
 ## Only required for localhost
 NEXTAUTH_URL=http://localhost:3000
