--- a/Frontend/.env.example
+++ b/Frontend/.env.example
@@ -2,8 +2,8 @@
 
 # Create a free PostgreSQL database: https://vercel.com/postgres
 # If you're deploying this template with a Vercel Deploy Button, these will be configured automatically for you.
-POSTGRES_PRISMA_URL=
-POSTGRES_URL_NON_POOLING=
+# POSTGRES_PRISMA_URL=
+# POSTGRES_URL_NON_POOLING=
 
 # Follow the instructions here to create a Google OAuth app: https://refine.dev/blog/nextauth-google-github-authentication-nextjs/#for-googleprovider-make-sure-you-have-a-google-account
 GOOGLE_CLIENT_ID=443946806866-q71286u6klc9m9geb3g7ttdd50prfck6.apps.googleusercontent.com
