--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.13.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.16.2",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -22,6 +24,7 @@
     "@vercel/analytics": "^0.1.11",
     "@vercel/og": "^0.0.26",
     "classnames": "^2.3.2",
+    "cloudinary-core": "^2.13.0",
     "clsx": "^2.0.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
@@ -37,6 +40,7 @@
     "tailwind-merge": "^1.14.0",
     "typescript": "5.2.2",
     "use-debounce": "^9.0.4",
+    "uuid": "^9.0.1",
     "vaul": "^0.6.8"
   },
   "devDependencies": {
@@ -44,6 +48,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
     "@types/ms": "^0.7.32",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.4.16",
     "concurrently": "^7.6.0",
     "postcss": "^8.4.31",
