--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -34,6 +34,7 @@
     "ms": "^2.1.3",
     "next": "13.5.5-canary.19",
     "next-auth": "4.22.1",
+    "next-cloudinary": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
